Cleared unnecessary files

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,10 @@
         name="viewport"
         content="width=device-width, initial-scale=1.0"
     >
-    <title>Random number generator</title>
-
-    <link rel="stylesheet" href="./css/custom.css">
+    <title>Webpack config template</title>
 </head>
 
 <body>
-
-    <h2>Custom function</h2>
-    <h2 class="random-number--custom"></h2>
-
-    <h2>Lodash radom</h2>
-    <h2 class="random-number--lodash"></h2>
 
 </body>
 
